# GraphOpt

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/bundle_adjustment/: CMakeLists.txt  bundle_adjustment.cpp
example/curve_fitting/: CMakeLists.txt  curve_fitting.cpp
gopt/: CMakeLists.txt
gopt/graph/: BaseBinaryEdge.h  BaseEdge.h  BaseUnaryEdge.h  BaseVertex.h  CMakeLists.txt  FactorGraph.cpp  FactorGraph.h  NumericJacobian.h
gopt/loss/: CMakeLists.txt  HuberLoss.cpp  HuberLoss.h  LossFunctionBase.h
gopt/solver/: CMakeLists.txt  GaussNewtonShurSolver.cpp  GaussNewtonShurSolver.h  GaussNewtonSolver.cpp  GaussNewtonSolver.h  GaussNewtonSparseShurSolver.cpp  GaussNewtonSparseShurSolver.h  GaussNewtonSparseSolver.cpp  GaussNewtonSparseSolver.h  LevenbergMarquartSparseShurSolver.cpp  LevenbergMarquartSparseShurSolver.h  LevenbergMarquartSparseSolver.cpp  LevenbergMarquartSparseSolver.h  OptSolverBase.h
gopt/util/: CMakeLists.txt  TicToc.cpp  TicToc.h  eigen_types.cpp  eigen_types.h  ownership.h
